Stop buttons going off screen

--- a/style.css
+++ b/style.css
@@ -151,10 +151,6 @@ button:hover {
 }
 
 button {
-    /* outline: none !important;
-border: solid 1px black;
-box-sizing: border-box; */
-
     outline: solid 1px black !important;
 }
 
@@ -180,11 +176,9 @@ button.toggle {
     color: black;
 }
 
-#slidecontainer{
-
-display: flex;
-flex-direction: column;
-
+#slidecontainer {
+    display: flex;
+    flex-direction: column;
 }
 
 .slider {
@@ -234,8 +228,7 @@ flex-direction: column;
     justify-content: center;
     align-items: center;
     display: flex;
-
-     order: 2;
+    order: 2;
 }
 
 #footer {
@@ -257,45 +250,6 @@ flex-direction: column;
     transform: rotate(360deg) scale(1.2);
 }
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
 @media only screen and (min-width: 769px) {
     #container {
         max-width: 100%;
@@ -306,130 +260,79 @@ flex-direction: column;
         flex-direction: row;
         align-items: center;
         /* background-color: aquamarine; */
-
     }
-
+    
     #buttons {
-        flex-basis: 1;
-        /* flex-grow: 0.1; */
-        /* flex-shrink: 2; */
+        flex-basis: 100%;
         order: 1;
         display: flex;
-        flex-direction: column;
+        flex-direction: row;
         min-height: 256px;
         height: calc(100vh - 139.2px);
         flex-wrap: wrap-reverse;
-        /* gap: 8px; */
         margin: auto 16px auto 0px;
         justify-content: center;
         align-content: flex-start;
-
-        /* width: 100%; */
+        writing-mode: vertical-lr;
+        /* gap: 8px; */
     }
 
     button {
         margin: 0;
-        align-self: flex-start
+        align-self: flex-start;
+        writing-mode: horizontal-tb;
     }
-
 
     #grid-container {
         display: flex;
         order: 2;
-        flex-basis: 1;
+        flex-basis: 100%;
         flex-grow: 1;
         flex-shrink: 0;
         min-width: 256px;
         max-width: calc(100vh - 139.2px);
-        
-        /* width: 100%; */
     }
 
     #grid {
         max-width: 100%;
         max-height: 100%;
-
     }
 
     #pre-slidecontainer {
         display: flex;
-        flex-basis: 1;
+        flex-basis: 100%;
         order: 3;
         margin: auto 0px auto 16px;
         min-width: 64px;
-
-        /* width: 100%; */
+        max-width: 512px;
     }
 
     #slidecontainer {
-       
-
         display: flex;
         flex-direction: row;
-
-
-        /* flex-basis: 100%;  */
-
-        /* margin: auto 16px;
-        
-        */
-
-        /* display: flex; */
-
-        /* justify-content: center; */
-
         align-items: center;
-
-        /* align-content: center; */
-
-        /* rotate: -90deg; */
-
-
-        /* flex-grow: 1; */
-        /* justify-content: top;
-        align-items: top; */
-
-
         min-height: 256px;
         height: calc(100vh - 139.2px);
         max-height: 512px;
-
         width: 64px;
         margin-left: -112px;
-
-      
-  
-
-
     }
 
     .slider {
         -webkit-appearance: none;
         appearance: none;
         transform: rotate(-90deg);
-
-        /* min-width: 256px; 
-        max-width: 512px;  */
-
-        /* width: 100%; */
         min-width: 256px;
         max-width: 512px;
-
         width: 100%;
-
-
         height: 32px;
-
         background: silver;
         opacity: 0.66;
         margin: 0;
     }
-    
+
     .size {
         margin: 0;
-
-
-
         padding: 0;
         min-height: 256px;
         display: flex;
@@ -439,8 +342,6 @@ flex-direction: column;
         min-width: 32px;
         margin-left: -112px;
     }
-
-
 
 
 }
